# LiveDePython

./: .gitignore  README.md  pyproject.toml
core/: settings.py
