[tool.poetry]
name = "livedepython"
version = "0.1.0"
description = ""
authors = ["Samuel França <samuelfranca.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
